fix key in maps + add character
